--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 attrs==23.2.0
 certifi==2024.7.4
+charset-normalizer==3.3.2
 customtkinter==5.2.2
 darkdetect==0.8.0
 et-xmlfile==1.1.0
@@ -9,6 +10,8 @@ openpyxl==3.1.5
 outcome==1.3.0.post0
 packaging==24.1
 PySocks==1.7.1
+python-dotenv==1.0.1
+requests==2.32.3
 selenium==4.23.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
@@ -16,5 +19,6 @@ trio==0.26.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
 urllib3==2.2.2
+webdriver-manager==4.0.2
 websocket-client==1.8.0
 wsproto==1.2.0
